--- a/kthome/src/main/webapp/WEB-INF/web.xml
+++ b/kthome/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,11 @@
 			<param-value>utf-8</param-value>
 		</init-param>
 	</filter>
+	
+	<filter-mapping>
+		<filter-name>CharacterEncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
